--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "tsc",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
-  "author": "Steffen Viken Valvåg <steffen@valvag.no>",
+  "author": "Steffen Viken Valvåg",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.0",
